force-app/main/default/objects/Product__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>if( AND(Product_Group__c !=null , text(Product_Group__r.Applicable_For__c) ==&apos;All&apos;,Product_Group__r.Active__c ), 
			 Product_Group__r.Discount__c*100 ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>