force-app/main/default/objects/Product__c/fields/Fixed_Price_Item__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Price_Item__c</fullName>
    <defaultValue>&apos;N&apos;</defaultValue>
    <label>Fixed Price Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>