force-app/main/default/objects/Product__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GST_percentages</valueSetName>
    </valueSet>
</CustomField>