force-app/main/default/objects/Product__c/fields/Old_GST__c.field-meta.xml
<CustomField>
    <fullName>Old_GST__c</fullName>
    <label>Old GST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>