force-app/main/default/objects/Product__c/fields/Old_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Old_Sales_Tax__c</fullName>
    <label>Old Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>