force-app/main/default/objects/Product__c/fields/Product_catogery__c.field-meta.xml
<CustomField>
    <fullName>Product_catogery__c</fullName>
    <label>Product catogery</label>
    <type>TextArea</type>
</CustomField>