force-app/main/default/objects/Product__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>IF(Product_Image_Url__c != null , IMAGE(  Product_Image_Url__c , &apos;image&apos;), IMAGE(  &apos;https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQxw2zmO4oHZBX0PUSZd_nD6IAl203sdkzxCw&amp;usqp=CAU&apos; , &apos;image&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Image</label>
    <type>Text</type>
</CustomField>