force-app/main/default/objects/Product__c/fields/Product_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Code__c</fullName>
    <formula>Name + &apos; (&apos; + Product_Code__c  + &apos;)&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name/Code</label>
    <type>Text</type>
</CustomField>