force-app/main/default/objects/Product__c/fields/Purchase_Tax__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Tax__c</fullName>
    <label>Purchase Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>