force-app/main/default/objects/Product__c/fields/SF_PRD_CODE__c.field-meta.xml
<CustomField>
    <fullName>SF_PRD_CODE__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>SF PRD CODE</label>
    <type>AutoNumber</type>
</CustomField>