force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Brand__c</columns>
    <columns>GST__c</columns>
    <columns>Sales_Tax__c</columns>
    <columns>Old_GST__c</columns>
    <columns>Old_Sales_Tax__c</columns>
    <columns>Company_Id__c</columns>
    <columns>CompanyId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>